--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 certifi==2017.11.5
 chardet==3.0.4
 Django==2.0
-flake8==3.5.0
+django-instagram==0.1.1
 gunicorn==19.7.1
+httplib2==0.10.3
 idna==2.6
-mccabe==0.6.1
-pew==1.1.1
-pipenv==9.0.0
 pycodestyle==2.3.1
 pyflakes==1.6.0
+python-instagram==1.3.2
 pytz==2017.3
 requests==2.18.4
+simplejson==3.13.2
 urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
