--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ python-instagram==1.3.2
 pytz==2017.3
 requests==2.18.4
 simplejson==3.13.2
+six==1.11.0
 urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
