--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,14 @@
 certifi==2017.11.5
 chardet==3.0.4
 Django==2.0
-django-instagram==0.1.1
+django-instagram==0.2.0a1
 gunicorn==19.7.1
-httplib2==0.10.3
 idna==2.6
-pycodestyle==2.3.1
-pyflakes==1.6.0
-python-instagram==1.3.2
+lxml==4.1.1
+olefile==0.44
+Pillow==4.3.0
 pytz==2017.3
 requests==2.18.4
-simplejson==3.13.2
-six==1.11.0
+sorl-thumbnail==12.4.1
 urllib3==1.22
-virtualenv==15.1.0
-virtualenv-clone==0.2.6
 whitenoise==3.3.1
