--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-certifi==2018.8.24
+certifi==2019.3.9
 chardet==3.0.4
-Django==2.1.2
+Django==2.2
 gunicorn==19.9.0
-idna==2.7
+idna==2.8
 lxml==4.1.1
 olefile==0.44
 Pillow==4.3.0
-pytz==2018.5
-requests==2.19.1
+pytz==2019.1
+requests==2.21.0
 sorl-thumbnail==12.4.1
-urllib3==1.23
-whitenoise==4.1
+sqlparse==0.3.0
+urllib3==1.24.1
+whitenoise==4.1.2
