--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
+asgiref==3.2.10
 certifi==2019.3.9
 chardet==3.0.4
 Django==3.1
 gunicorn==19.9.0
 idna==2.8
-lxml==4.1.1
+lxml==4.6.1
 olefile==0.44
 Pillow==7.2.0
 pytz==2020.1
 requests==2.24.0
+six==1.15.0
 sorl-thumbnail==12.4.1
 sqlparse==0.3.0
 urllib3==1.25.10
