--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
+asgiref==3.5.0
 certifi==2019.3.9
 chardet==3.0.4
-Django==4.0.1
+charset-normalizer==2.0.10
+Django==4.0.3
 gunicorn==20.1.0
 idna==2.8
 lxml==4.7.1
 olefile==0.44
-Pillow==9.0.0
+Pillow==9.0.1
 pytz==2020.1
-requests== 2.27.1
+requests==2.27.1
 six==1.15.0
 sorl-thumbnail==12.4.1
 sqlparse==0.3.0
